--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,9 +34,13 @@
   font-weight: normal;
   font-style: normal;
 }
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
 }
 html{
 }
@@ -48,7 +52,6 @@ html{
 }
 body {
   width: 100vw;
-  max-width: 100%;
   height: auto;
   min-height: 100vh;
   display: flex;
@@ -62,7 +65,9 @@ body {
 }
 body .back_mask{
   position: fixed;
-  height: 100%;
-  right: 0;
+  height: 80%;
+  top: 50%;
+  right: 10%;
+  transform: translateY(-50%);
   z-index: 5;
 }
