--- a/public/stylesheets/topup.css
+++ b/public/stylesheets/topup.css
@@ -10,7 +10,7 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .topup .balance{
-  width: calc(100% - 19px);
+  width: 100%;
   padding-left: 19px;
   display: flex;
   justify-content: flex-start;
@@ -42,14 +42,14 @@
 }
 .topup .box .direct{
   position: relative;
-  width: calc(100% - 12px);
+  width: 100%;
   padding: 4px 6px;
 }
 .topup .box .direct input{
   position: relative;
-  width: calc(100% - 96px);
-  padding: 12px 86px 12px 10px;
-  font-size: 1rem;
+  width: 100%;
+  padding: 12px 96px 12px 10px;
+  font-size: 1.3rem;
   outline: none;
   text-align: right;
   border: 1px solid #DD4C4C;
@@ -80,9 +80,7 @@
 }
 .topup .box .select{
   margin-top: 20px;
-  width: calc(100% - 12px);
-  min-height: 100px;
-  padding: 0 6px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -92,9 +90,9 @@
 .topup .box .select .content{
   position: relative;
   z-index: 9999;
-  width: 145px;
+  width: 48%;
   border: 1px solid #DCDCDC;
-  padding: 10px 20px;
+  padding: 10px 12px;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -128,6 +126,7 @@
 .topup .box .select .content .line .left span{
   color: #DD4C4C;
   letter-spacing: -0.6px;
+  font-size: 0.8rem;
 }
 .topup .box .select .content .line .right{
   width: 100%;
@@ -142,7 +141,7 @@
 .topup .box .regular{
   padding: 12px 25px;
   margin-top: 30px;
-  width: calc(100% - 62px);
+  width: 100%;
   background-color: #212121;
   border-radius: 6px;
   cursor: pointer;
@@ -204,4 +203,65 @@
   list-style-type: disc;
   padding-left: -50px;
   margin-left: 15px;
+}
+/* 모바일 */
+@media screen and (max-width:481px) {
+  .topup {
+    width: calc(100% - 20px);
+    min-width: 350px
+  }
+  .topup .box .direct{
+    padding: 0;
+  }
+  .topup .box .direct .title{
+    top: -7px;
+  }
+  .topup .box .direct button{
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .topup .box .select{
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .topup .box .select .content{
+    flex-direction: row;
+    width: 100%;
+  }
+  .topup .box .select .content .line{
+    margin: 0 !important;
+    width: 50%;
+  }
+  .topup .box .select .content .line .left{
+    width: auto;
+  }
+  .topup .box .select .content .line .right{
+    width: auto;
+  }
+  .topup .box .select .content :first-child{
+    justify-content: flex-start;
+  }
+  .topup .box .select .content :last-child{
+    justify-content: flex-end;
+  }
+  .topup .box .select .content .line .left img{
+    margin-right: 0px;
+  }
+  .topup .box .select .content .line .right p{
+    margin-left: 8px;
+  }
+}
+@media screen and (max-width:400px){
+  .topup .box .regular .line{
+    font-size: 17px;
+  }
+  .topup .box .regular .line .left{
+    font-size: 18px;
+  }
+  .topup .box .regular .line .right{
+    font-size: 17px;
+  }
+  .topup .box .regular .line b{
+    font-size: 12px;
+  }
 }
