--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body data-theme="dark">
-    <!-- <img class="back_mask" src="/images/Mask.svg" alt=""> -->
+    <img class="back_mask" src="/images/Mask.svg" alt="">
     <%- include('nav.ejs') %>
     <%- include(page) %>
-  </body>
-  <footer>
     <%- include('footer.ejs') %>
-  </footer>
+  </body>
 </html>
