--- a/views/series.ejs
+++ b/views/series.ejs
@@ -10,8 +10,8 @@
       <div class="imgbox">
         <img src="images/img/011454884a20ebe329565d653639090d.jpg" alt="">
         <div class="imageDark"></div>
-        <p class="mobile_image_title">양과 여우들의 밤</p>
       </div>
+      <p class="mobile_image_title">양과 여우들의 밤</p>
       <div class="likeMark">
         <div class="like">
           <ion-icon name="star"></ion-icon>4.8 (4.1K)
@@ -21,14 +21,14 @@
         </div>
       </div>
       <div class="mobile_infoBox">
-        <div>
+        <!-- <div>
           <p class="head">평균</p>
           <p><ion-icon name="star"></ion-icon>4.8</p>
         </div>
         <div>
           <p class="head">북마크</p>
           <p><ion-icon name="bookmark-outline"></ion-icon>10,282</p>
-        </div>
+        </div> -->
         <div>
           <p class="head">장르</p>
           <p>액션, 판타지</p>
@@ -153,7 +153,7 @@
               <div class="item_text">
                 <p><b>EP</b> 1</p>
                 <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
-                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <p><span>★ 4.5&nbsp;&nbsp;&nbsp;&nbsp;</span>22.06.22</p>
                 <button class="free">무료보기</button>
               </div>
             </div>
@@ -166,7 +166,7 @@
               <div class="item_text">
                 <p><b>EP</b> 2</p>
                 <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
-                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <p><span>★ 4.5&nbsp;&nbsp;&nbsp;&nbsp;</span>22.06.22</p>
                 <button>대여하기</button>
               </div>
             </div>
@@ -179,7 +179,7 @@
               <div class="item_text">
                 <p><b>EP</b> 3</p>
                 <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
-                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <p><span>★ 4.5&nbsp;&nbsp;&nbsp;&nbsp;</span>22.06.22</p>
                 <button>대여하기</button>
               </div>
             </div>
@@ -192,7 +192,7 @@
               <div class="item_text">
                 <p><b>EP</b> 4</p>
                 <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
-                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <p><span>★ 4.5&nbsp;&nbsp;&nbsp;&nbsp;</span>22.06.22</p>
                 <button>대여하기</button>
               </div>
             </div>
@@ -205,7 +205,7 @@
               <div class="item_text">
                 <p><b>EP</b> 5</p>
                 <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
-                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <p><span>★ 4.5&nbsp;&nbsp;&nbsp;&nbsp;</span>22.06.22</p>
                 <button>대여하기</button>
               </div>
             </div>
@@ -218,7 +218,7 @@
               <div class="item_text">
                 <p><b>EP</b> 6</p>
                 <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
-                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <p><span>★ 4.5&nbsp;&nbsp;&nbsp;&nbsp;</span>22.06.22</p>
                 <button>대여하기</button>
               </div>
             </div>
@@ -231,7 +231,7 @@
               <div class="item_text">
                 <p><b>EP</b> 6</p>
                 <p>검의 무게를 견뎌내는 자, 욕망을 다스리는 자 </p>
-                <p> ★ 4.5 &nbsp;&nbsp;&nbsp;&nbsp;22.06.22</p>
+                <p><span>★ 4.5&nbsp;&nbsp;&nbsp;&nbsp;</span>22.06.22</p>
                 <button>대여하기</button>
               </div>
             </div>
