--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,5 +1,5 @@
 .footer{
-  position: relative;
+  position: absolute;
   width: 100vw;
   height: 200px;
   max-width: 100vw;
@@ -10,8 +10,7 @@
   justify-content: space-between;
   align-items: flex-start;
   z-index: 10;
-  /* margin-top: 30px; */
-  transform: translateY(100%);
+  bottom: 0;
 }
 .footer .left{
   width: 35%;
