--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,7 @@
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
 }
 html{
+  height: 100%;
 }
 :root {
   --background-base: #EFEFEF;
@@ -52,7 +53,7 @@ html{
 }
 body {
   width: 100vw;
-  min-height: 100vh !important; 
+  min-height: 100%; 
   height: auto;
   display: flex;
   flex-direction: column;
@@ -61,7 +62,9 @@ body {
   font-family: 'NEXON Lv2 Gothic';
   background-color: var(--background-base);
   transition: all .2s ease-in-out;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
+  position: relative;
+  padding-bottom: 230px;
 }
 body .back_mask{
   position: fixed;
