--- a/public/stylesheets/series.css
+++ b/public/stylesheets/series.css
@@ -32,6 +32,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: var(--box-shadow) 0px 1px 2px;
+  font-weight: bold;
 }
 .series .title p{
   font-size: 1.4rem;
@@ -738,6 +739,9 @@
   right: 12px;
   top: 50%;
   transform: translateY(-50%);
+}
+.mobile_image_title{
+  display: none;
 }
 html::-webkit-scrollbar{
   width: 8px;
