--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -20,5 +20,5 @@
     <div class="right">
     </div>
   </div>
-  <ion-icon name="contrast-outline" onclick="themeChange()"></ion-icon>
+  <!-- <ion-icon name="contrast-outline" onclick="themeChange()"></ion-icon> -->
 </div>
